--- a/package.json
+++ b/package.json
@@ -13,9 +13,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "firebase": "^10.12.5",
     "mysql2": "^3.11.0",
+    "react-bootstrap": "^2.10.4",
+    "react-hook-form": "^7.52.2",
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.26.0",
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
